# graphics

./: .gitignore  CMakeLists.txt  Makefile  graphics.cpp  graphics.h  main.cpp
include/: cast.h  color.h  events.h  graphics.h  line.h  point.h  polygon.h  raster.h  shape.h  triangulate.h  window.h
lb1/: CMakeLists.txt  main.cpp
lb2/: CMakeLists.txt  main.cpp  main.h
lb3/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  color.cpp  graphics.cpp
lib/graphics/: CMakeLists.txt  color.cpp  events.cpp  line.cpp  polygon.cpp  raster.cpp  window.cpp
lib/triang/: CMakeLists.txt  triangulate.cpp
